@@ -16,7 +16,6 @@ jobs:
       CI_OS_NAME: linux
       CI_RUNS_ON: ubuntu-22.04
       CI_COMMIT: ${{ github.sha }}
-      CI_M32: 0
     steps:
       - name: Checkout
         uses: actions/checkout@v3
