@@ -13,8 +13,3 @@ C++11 compiler support
 
   Verilator will require C++20 or newer compilers for both compiling
   Verilator and compiling all Verilated models no sooner than January 2025.
-
-32-bit compiler support
-  Verilator currently regresses both 64-bit and 32-bit pointer modes (GCC's
-  `-m64` and `-m32`).  Support for 32-bit `-m32` mode will be deprecated no
-  sooner than January 2024.
